--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -42,7 +42,7 @@ const {
 		</script>
 	</head>
 	<body
-		class="flex min-h-screen flex-col bg-stone-100 font-mono text-gray-950 dark:bg-stone-900 dark:text-white"
+		class="flex min-h-screen flex-col bg-stone-100 text-gray-950 dark:bg-stone-900 dark:text-white"
 	>
 		<Navbar />
 		<div class="flex-1">
