--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ const site = Astro.site;
 		</p>
 	</div>
 	<div class="flex">
-		<Social href="https://github.com/#">
+		<Social href="https://github.com/fuchen/devnotes.cc">
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
 				class="h-4 w-4"
